--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,13 +1,66 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #2a4bc5;
+  font-family: 'Open Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  background-size: 100% 100%; 
+  background-repeat: no-repeat;
+  background-image: url(assets/sign-in.png);
+  height: 100vh;
 }
+
+.container_sign-in{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  text-align: center;
+  height: 100vh;
+}
+
+.container_form{
+  color: #ffffff;
+  margin: auto auto;
+  width: 80%;
+  max-height: 250px;
+  max-width: 300px;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+}
+
+.form_input{
+  margin-bottom: 10px;
+  color: #ffffff;
+  height: 40px;
+  outline: none;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid #ffffff;
+  padding-left: 10px;
+}
+
+.form_button{
+  height: 35px;
+  background-color: #fff;
+  border: none;
+  border-radius: 5px;
+  color: #2a4bc5;
+  font-weight: bold;
+}
+
+::placeholder{ 
+  color: #ffffff; 
+}
+
+.form_link-signup{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
