--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,7 +11,8 @@ body {
   height: 100vh;
 }
 
-.container_sign-in{
+.container_sign-in,
+.container_sign-up{
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
@@ -23,7 +24,6 @@ body {
   color: #ffffff;
   margin: auto auto;
   width: 80%;
-  max-height: 250px;
   max-width: 300px;
 }
 
@@ -50,13 +50,15 @@ body {
   border-radius: 5px;
   color: #2a4bc5;
   font-weight: bold;
+  cursor: pointer;
 }
 
 ::placeholder{ 
   color: #ffffff; 
 }
 
-.form_link-signup{
+.form_link-signup,
+.form_link-signin{
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
