--- a/front-end/src/components/FormContainer/styles.css
+++ b/front-end/src/components/FormContainer/styles.css
@@ -16,10 +16,13 @@
 }
 
 .container_form{
-  color: #ffffff;
   margin: auto auto;
   width: 80%;
   max-width: 300px;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 15px;
+  color: #2b4eca;
 }
 
 .form{
@@ -40,10 +43,10 @@
 
 .form_button{
   height: 35px;
-  background-color: #fff;
+  background-color: #2b4eca;
   border: none;
   border-radius: 5px;
-  color: #2a4bc5;
+  color: #fff;
   font-weight: bold;
   cursor: pointer;
   margin-top: 15px;
@@ -54,7 +57,7 @@
   display: flex;
   justify-content: flex-end;
   margin-top: 10px;
-  color: #ffffff;
+  color: #2b4eca;
   text-decoration: none;
 }
 
