--- a/front-end/src/components/Dashboard/styles.css
+++ b/front-end/src/components/Dashboard/styles.css
@@ -51,8 +51,8 @@
 .modal_container{
   width: 500px;
   min-height: 100px;
-  background-color: transparent;
-  border: 1px solid #fff;
+  background-color: #fff;
+  border: 1px solid #000;
   position: relative;
   border-radius: 5px;
   box-shadow: rgba(100,100,111,0.2) 0px 7px 29px 0px;
@@ -68,13 +68,21 @@
   cursor: pointer;
   width: 30px;
   height: 30px;
-  color:#fff;
+  color:#999a9f;
   transition: .3s ease all;
   border-radius: 5px;
 }
 
 .modal_button-close:hover{
-  background-color:#fff;
   color: #000;
+}
+
+.active{
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
