--- a/front-end/src/components/InputText/styles.module.css
+++ b/front-end/src/components/InputText/styles.module.css
@@ -1,11 +1,11 @@
 .input{
   margin-top: 10px;
-  color: #ffffff;
+  color: #2b4eca;
   height: 40px;
   outline: none;
   background-color: transparent;
   border-radius: 5px;
-  border: 1px solid #ffffff;
+  border: 1px solid #999a9f;
   padding-left: 10px;
 }
 .messageError{
