saving token in localStorage

--- a/front-end/src/components/InputText/styles.module.css
+++ b/front-end/src/components/InputText/styles.module.css
@@ -1,6 +1,6 @@
 .input{
   margin-top: 10px;
-  color: #2b4eca;
+  color: #999a9f;
   height: 40px;
   outline: none;
   background-color: transparent;
